# clogbox

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Makefile.crates.toml  Makefile.plugins.toml  Makefile.toml  ruff.toml
.config/: config.toml  nextest.toml
.github/workflows/: check.yaml  clippy.yaml  test.yaml
crates/clogbox-clap/: Cargo.toml
crates/clogbox-clap-egui/: Cargo.toml
crates/clogbox-clap-egui/src/: generic_ui.rs  lib.rs
crates/clogbox-clap-egui/src/components/: driven.rs  knob.rs  led.rs  mod.rs
crates/clogbox-clap-egui/src/generic_ui/: mod.rs
crates/clogbox-clap-vizia/: Cargo.toml
crates/clogbox-clap-vizia/src/: data.rs  generic_ui.rs  lib.rs
crates/clogbox-clap-vizia/src/components/: knob.rs  mod.rs
crates/clogbox-clap/src/: atomic_linked_list.rs  dsp.rs  gui.rs  lib.rs  main_thread.rs  notifier.rs  params.rs  processor.rs  shared.rs
crates/clogbox-clap/src/main_thread/: log.rs  mod.rs
crates/clogbox-core/: Cargo.toml
crates/clogbox-core/src/: enum.rs  lib.rs  smoothers.rs
crates/clogbox-core/src/enum/: enum_map.rs  mod.rs
crates/clogbox-core/src/graph/: context.rs  driver.rs  event.rs  mod.rs  module.rs  slots.rs  storage.rs
crates/clogbox-core/src/graph/impl/: buffer_allocator.rs  error.rs  graph_helper.rs  graph_ir.rs  input_ir.rs  mod.rs  output_ir.rs
crates/clogbox-core/src/math/: dsp.rs  interpolation.rs  mod.rs  recip.rs
crates/clogbox-core/src/module/: analysis.rs  mod.rs  sample.rs  utilitarian.rs
crates/clogbox-core/src/modules/: delay.rs
crates/clogbox-core/src/param/: container.rs  curve.rs  events.rs  mod.rs  smoother.rs  value.rs
crates/clogbox-derive/: Cargo.toml
crates/clogbox-derive/src/: enum.rs  lib.rs  params.rs
crates/clogbox-derive/src/snapshots/: clogbox_derive__params__tests__derive_params_macro_nested.snap  clogbox_derive__params__tests__derive_params_macro_parsing.snap  clogbox_derive__params__tests__derive_params_macro_with_generic.snap  clogbox_derive__params__tests__derive_params_macro_with_where_clause.snap  clogbox_derive__r#enum__tests__derive_enum_with_where_clause.snap  clogbox_derive__r#enum__tests__derive_generic_enum.snap  clogbox_derive__r#enum__tests__derive_generic_enum_with_nested.snap  clogbox_derive__r#enum__tests__derive_nested.snap  clogbox_derive__r#enum__tests__simple_derive.snap  clogbox_derive__r#enum__tests__simple_derive.snap.new
crates/clogbox-derive/tests/: derive_enum.rs  derive_params.rs
crates/clogbox-derive/tests/snapshots/: derive_enum__generic_enum_iter.snap  derive_enum__outer_enum_iter.snap
crates/clogbox-enum/: Cargo.toml
crates/clogbox-enum/src/: enum_map.rs  lib.rs
crates/clogbox-filters/: .gitignore  Cargo.toml  Makefile.toml  gen_svf.py
crates/clogbox-filters/src/: biquad.rs  lib.rs  saturators.rs  svf.rs
crates/clogbox-filters/src/svf/: mod.rs
crates/clogbox-graph/: Cargo.toml
crates/clogbox-graph/src/: adjacency.rs  base.rs  data.rs  errors.rs  lib.rs  wrappers.rs
crates/clogbox-graph/src/algorithms/: mod.rs  path.rs  traversal.rs
crates/clogbox-graph/src/graph/: buffer_allocator.rs  error.rs  graph_helper.rs  graph_ir.rs  input_ir.rs  mod.rs  output_ir.rs
crates/clogbox-graph/src/schedule/: mod.rs  serde.rs
crates/clogbox-math/: Cargo.toml
crates/clogbox-math/src/: dsp.rs  frequency.rs  interpolation.rs  lib.rs  recip.rs
crates/clogbox-math/src/root_eq/: mod.rs  nr.rs
crates/clogbox-module/: Cargo.toml
crates/clogbox-module/src/: context.rs  dyn.rs  eventbuffer.rs  lib.rs  macros.rs  note.rs  sample.rs
crates/clogbox-module/src/contrib/: fundsp.rs  mod.rs
crates/clogbox-module/src/modules/: env_follower.rs  extract.rs  mod.rs
crates/clogbox-oscillators/: Cargo.toml
crates/clogbox-oscillators/src/: lib.rs
crates/clogbox-params/: Cargo.toml
crates/clogbox-params/src/: lib.rs  smoothers.rs
crates/clogbox-schedule/: Cargo.toml
crates/clogbox-schedule/src/: event.rs  fixed_delay.rs  graph.rs  lib.rs  module.rs  note.rs  param.rs  storage.rs  sum.rs
crates/clogbox-schedule/src/graph/: compile.rs  mod.rs
crates/clogbox-utils/: Cargo.toml
crates/clogbox-utils/src/: atomic_f32.rs  lib.rs
crates/fixed-ringbuf/: Cargo.toml
crates/fixed-ringbuf/src/: lib.rs  rb.rs
crates/fixed-ringbuf/src/tests/: miri_tests.rs  mod.rs  proptest_tests.rs
etc/docs.rs/: katex.html
examples/compressor/: Cargo.toml
examples/compressor/src/: dsp.rs  gui.rs  lib.rs
examples/env-follower/: Cargo.toml
examples/env-follower/src/: dsp.rs  gui.rs  lib.rs
examples/fundsp-plugin/: Cargo.toml
examples/fundsp-plugin/src/: dsp.rs  lib.rs
examples/note-input/: Cargo.toml
examples/note-input/src/: dsp.rs  lib.rs
examples/nr-clipper/: Cargo.toml  Makefile.toml  gen_dsp.py
examples/nr-clipper/src/: dsp.rs  gui.rs  lib.rs
examples/svfmixer/: Cargo.toml  Makefile.toml  gen_svf.py
examples/svfmixer/src/: dsp.rs  gui.rs  lib.rs  main_thread.rs  params.rs  processor.rs  shared.rs
python/clogbox/: .gitignore  pyproject.toml
python/clogbox/src/clogbox/: __init__.py  codegen.py  nodes.py  nr.py
python/clogbox/src/clogbox/filters/: __init__.py  svf.py
python/clogbox/tests/: conftest.py  test_diode_clipper.py  test_svf.py  test_sympy_codegen.py
python/clogbox/tests/__snapshots__/: test_diode_clipper.ambr  test_svf.ambr  test_sympy_codegen.ambr
scripts/: create_clap_bundle.py
src/module/: mod.rs
src/param/: mod.rs  value.rs
