[package]
name = "clogbox-core"
version = "0.1.0"
edition = "2021"

[dependencies]
az.workspace = true
numeric-array = "0.6.1"
num-traits.workspace = true
profiling.workspace = true
serde_json.workspace = true
typenum.workspace = true

duplicate = "2.0.0"
fortuples = "0.9.1"
thiserror = "1.0.64"
vtable = "0.2.0"