[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.1.0"
rust-version = "1.84"
authors = ["Nathan Graule <me@solarliner.dev>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/SolarLiner/clogbox"
repository = "https://github.com/SolarLiner/clogbox"
keywords = ["virtual-analog", "audio", "plugin", "va-modeling", "dsp"]

[workspace.dependencies]
clogbox-clap = { path = "crates/clogbox-clap" }
clogbox-clap-egui = { path = "crates/clogbox-clap-egui" }
clogbox-derive = { path = "crates/clogbox-derive" }
clogbox-enum = { path = "crates/clogbox-enum" }
clogbox-filters = { path = "crates/clogbox-filters" }
clogbox-math = { path = "crates/clogbox-math" }
clogbox-module = { path = "crates/clogbox-module" }
clogbox-params = { path = "crates/clogbox-params" }
clogbox-utils = { path = "crates/clogbox-utils" }
fixed-ringbuf = { path = "crates/fixed-ringbuf" }

# Dependencies
az = "1.2.1"
derive_more = "1.0.0"
generic-array = "1.1.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
num-complex = "0.4.6"
num-traits = "0.2.18"
numeric-array = "0.6.1"
numeric_literals = "0.2.0"
nalgebra = "0.33.0"
profiling = "1.0.15"
ringbuf = "0.4.8"
slotmap = "1.0.7"
thiserror = "2.0.3"
typenum = "1.17.0"
typenum-consts = "0.1.5"
zerocopy = "0.8.25"

# Dev dependencies
approx = "0.5.1"
insta = { version = "1.34.0", features = ["csv", "redactions"] }
proptest = "1.5.0"
rstest = "0.22.0"
serde = "1.0.210"
serde_json = "1.0.128"
plotters = "0.3.6"

# Plugins dependencies
clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git" }

#[package]
#name = "clogbox"
#version.workspace = true
#rust-version.workspace = true
#authors.workspace = true
#edition.workspace = true
#license.workspace = true
#homepage.workspace = true
#repository.workspace = true
#keywords.workspace = true

[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3

