[package]
name = "clogbox-clap"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-enum.workspace = true
clogbox-math.workspace = true
clogbox-module.workspace = true

clack-plugin.workspace = true
clack-extensions = { workspace = true, features = ["clack-plugin", "audio-ports", "params", "state"] }

baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9a0b42c09d712777b2edb4c5e0cb6baf21e988f0", optional = true }
egui = { version = "0.31", optional = true }
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview.git", branch = "main", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }

bincode = "2.0.0"

[features]
default = ["gui"]
gui = ["clack-extensions/gui", "clack-extensions/raw-window-handle_05", "dep:baseview", "dep:egui", "dep:egui-baseview",
    "dep:raw-window-handle"]
