[package]
name = "clogbox-clap"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-enum.workspace = true
clogbox-math.workspace = true
clogbox-module.workspace = true

clack-plugin.workspace = true
clack-extensions = { workspace = true, features = ["clack-plugin", "audio-ports", "params", "state"] }
ringbuf = { workspace = true, optional = true }

raw-window-handle = { version = "0.5.0", optional = true }

bincode = "2.0.0"

[features]
gui = ["clack-extensions/gui", "clack-extensions/raw-window-handle_05", "dep:raw-window-handle", "dep:ringbuf"]
