[package]
name = "clogbox-clap"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-enum.workspace = true
clogbox-math.workspace = true
clogbox-module.workspace = true

clack-plugin.workspace = true
clack-extensions = { workspace = true, features = ["clack-plugin", "audio-ports", "params", "state", "note-ports"] }
env_logger = { workspace = true, optional = true }
log.workspace = true
ringbuf = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

bincode = "2.0.0"
raw-window-handle = { version = "0.5.0", optional = true }

[features]
default = ["log"]
gui = ["bincode/serde", "clack-extensions/gui", "clack-extensions/raw-window-handle_05", "dep:raw-window-handle", "dep:ringbuf",
    "dep:serde_json"]
log = ["dep:env_logger", "clack-extensions/log", "clack-extensions/timer", "log/std"]
