[package]
name = "clogbox-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
az.workspace = true
num-complex.workspace = true
num-traits.workspace = true
numeric-array.workspace = true
numeric_literals.workspace = true
profiling.workspace = true
serde_json.workspace = true
typenum.workspace = true

duplicate = "2.0.0"
fortuples = "0.9.1"
serde = { version = "1.0.215", optional = true }
thiserror.workspace = true
vtable = "0.2.0"

[dev-dependencies]
clogbox-derive = { path = "../clogbox-derive" }

rstest.workspace = true

approx = "0.5.1"

[features]
serialize = ["dep:serde", "numeric-array/serde", "serde/derive"]