[package]
name = "clogbox-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clogbox-enum = { path = "../clogbox-enum" }

az.workspace = true
derive_more = { workspace = true, features = ["debug", "deref", "deref_mut"] }
num-complex.workspace = true
num-traits.workspace = true
numeric-array.workspace = true
numeric_literals.workspace = true
slotmap.workspace = true
typenum.workspace = true

bincode = { version = "2.0.0-rc.3", optional = true }
duplicate = "2.0.0"
generic-array.workspace = true
serde = { version = "1.0.215", optional = true }
thiserror.workspace = true

[dev-dependencies]
approx = "0.5.1"
proptest.workspace = true

[features]
default = ["std"]
std = ["bincode/std", "num-complex/std", "num-traits/std", "serde/std"]
no_std = ["typenum/no_std", "num-traits/libm"]
serialize = ["dep:serde", "clogbox-enum/serialize", "numeric-array/serde", "serde/derive", "slotmap/serde"]
data-param = ["dep:bincode", "bincode/derive"]