[package]
name = "clogbox-derive"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.8"
itertools = "0.13.0"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"

[dev-dependencies]
clogbox-core = { path = "../clogbox-core" }

insta.workspace = true
prettyplease = "0.2.19"
typenum.workspace = true
