[package]
name = "clogbox-filters"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-core.workspace = true
clogbox-enum.workspace = true

az.workspace = true
generic-array.workspace = true
num-complex.workspace = true
num-traits.workspace = true
numeric-array.workspace = true
numeric_literals.workspace = true
profiling.workspace = true
serde_json.workspace = true
typenum.workspace = true
