[package]
name = "clogbox-filters"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-enum.workspace = true
clogbox-module.workspace = true
clogbox-params.workspace = true

az.workspace = true
generic-array.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
numeric_literals.workspace = true
profiling.workspace = true
typenum.workspace = true
