[package]
name = "clogbox-graph"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-core = { path = "../clogbox-core" }
clogbox-derive = { path = "../clogbox-derive" }

num-traits.workspace = true
serde = { version = "1.0.215", optional = true }
serde_cbor = { version = "0.11.2", optional = true }
serde_json = { version = "1.0.132", optional = true }
slotmap = "1.0.7"
thiserror.workspace = true
typenum = "1.17.0"

[features]
serialize = ["dep:serde", "dep:serde_cbor", "dep:serde_json", "clogbox-core/serialize", "serde/derive", "slotmap/serde"]