[package]
name = "clogbox-graph"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
ndarray = "0.16.1"
slotmap.workspace = true
thiserror.workspace = true
