[package]
name = "clogbox-math"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-enum.workspace = true

az.workspace = true
num-complex.workspace = true
num-traits.workspace = true
numeric-array.workspace = true
numeric_literals.workspace = true
typenum.workspace = true
thiserror = "1.0.64"

[dev-dependencies]
approx.workspace = true
proptest.workspace = true