[package]
name = "clogbox-module"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-enum.workspace = true
clogbox-math.workspace = true
fixed-ringbuf.workspace = true

az.workspace = true
fundsp = { version = "0.20", optional = true }
num-traits.workspace = true
numeric_literals.workspace = true
typenum.workspace = true

[features]
fundsp = ["dep:fundsp"]