[package]
name = "clogbox-oscillators"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-enum.workspace = true
clogbox-math.workspace = true
clogbox-module.workspace = true

az.workspace = true
num-traits.workspace = true