[package]
name = "clogbox-params"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clogbox-math.workspace = true

az.workspace = true
num-traits.workspace = true
numeric-array.workspace = true
