[project]
name = "clogbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan Graule", email = "solarliner@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
nr = [
    "sympy>=1.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
